--- a/lesson7hw/Lesson_7_HW.ipynb
+++ b/lesson7hw/Lesson_7_HW.ipynb
@@ -5,7 +5,7 @@
    "id": "38a1f07d",
    "metadata": {},
    "source": [
-    "# Практическое задание №7 \"Градиентный бустинг. AdaBoost\"."
+    "# Практическое задание №7 \"Классификация с помощью KNN. Кластеризация K-means\"."
    ]
   },
   {
